[package]
name = "ria"
version = "0.1.9"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.4"
chrono = "0.4"
escape_string = "0.1"
file-format = "0.7"
#glib = { version="0.16", optional = true }
glib = "0.16"
#gstreamer = { version = "0.19", optional = true}
gstreamer = "0.19"
gstreamer-pbutils = "0.19"
musicbrainz_rs = "0.4"
once_cell = "1.16"
percent-encoding = "2.2"
sea-orm = { version = "0.10", features = ["sqlx-postgres", "runtime-tokio-rustls" ] }
sea-query = "0.27"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
walkdir = "2.3"
