[package]
name = "ria"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
escape_string = "0.1"
figment = { version = "0.10", features = ["env", "toml"] }
file-format = "0.7"
musicbrainz_rs = "0.4"
once_cell = "1.16"
percent-encoding = "2.2"
regex = "1.0"
rodio = { version = "0.16", features = ["symphonia-all"], default-features = false }
sea-orm = { version = "0.10", features = ["sqlx-all", "runtime-tokio-rustls" ] }
sea-query = "0.27"
serde = "1.0"
serde_json = "1.0"
symphonia = { version = "0.5", features = ["aac", "alac", "isomp4", "mp3"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
walkdir = "2.3"
